--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
 
     <!--FOOTER-->
     <footer>
-        <a href="" aria-label="логотип веб-студии" lang="en">WebStudio</a>
+        <a href="" aria-label="логотип веб-студии" lang="en"><span>Web</span><span>Studio</span></a>
 
         <address>
             <ul>
